--- a/TensorFlow/playbooks/package_installation/roles/cuda/tasks/main.yaml
+++ b/TensorFlow/playbooks/package_installation/roles/cuda/tasks/main.yaml
@@ -66,7 +66,7 @@
 
 - name: Build and install VDPAU
   shell: |
-    cd {{ VDPAU }}/libvdpau
+    cd {{ VDPAU }}
     meson builddir
     cd builddir
     ninja
