--- a/TensorFlow/playbooks/package_installation/roles/cuda/tasks/main.yaml
+++ b/TensorFlow/playbooks/package_installation/roles/cuda/tasks/main.yaml
@@ -48,6 +48,117 @@
       - ninja
     executable: pip3
 
+- name: Now we need to build libX11, so let's remove libX11's build dir if it exists
+  file:
+    state: absent
+    path: '{{ LIBX11_BUILD_DIR }}'
+
+- name: Recreate (or create) libX11 build dir
+  file:
+    state: directory
+    path: '{{ LIBX11_BUILD_DIR }}'
+
+- name: Download libX11 tarball
+  unarchive:
+    src: 'https://www.x.org/releases/individual/lib/libX11-{{ LIBX11_VERSION }}.tar.gz'
+    dest: '{{ LIBX11_BUILD_DIR }}'
+    remote_src: yes
+    extra_opts: [--strip-components=1]
+
+- name: Configure libX11
+  shell: |
+    cd {{ LIBX11_BUILD_DIR }}
+    ./configure
+
+- name: Make libX11
+  make:
+    target: all
+    chdir: '{{ LIBX11_BUILD_DIR }}'
+
+- name: Install libX11
+  make:
+    target: install
+    chdir: '{{ LIBX11_BUILD_DIR }}'
+
+- name: Remove libX11 build dir
+  file:
+    state: absent
+    path: '{{ LIBX11_BUILD_DIR }}'
+
+- name: Next step is to build libXext, so let's first remove the libXext build dir if it exists
+  file:
+    state: absent
+    path: '{{ LIBXEXT_BUILD_DIR }}'
+
+- name: Recreate (or create) libXext build dir
+  file:
+    state: directory
+    path: '{{ LIBXEXT_BUILD_DIR }}'
+
+- name:  Download libXext tarball
+  unarchive:
+    src: 'https://www.x.org/releases/individual/lib/libXext-{{ LIBXEXT_VERSION }}.tar.gz'
+    dest: '{{ LIBXEXT_BUILD_DIR }}'
+    remote_src: yes
+    extra_opts: [--strip-components=1]
+
+- name: Configure libXext
+  shell: |
+    cd {{ LIBXEXT_BUILD_DIR }}
+    ./configure
+
+- name: Make libXext
+  make:
+    target: all
+    chdir: '{{ LIBXEXT_BUILD_DIR }}'
+
+- name: Install libXext
+  make:
+    target: install
+    chdir: '{{ LIBXEXT_BUILD_DIR }}'
+
+- name: Remove libXext build dir
+  file:
+    state: absent
+    path: '{{ LIBXEXT_BUILD_DIR }}'
+
+- name: We need to install dri2proto so we can build our dependencies. First, let's remove dri2proto build dir if it exists
+  file:
+    state: absent
+    path: '{{ DRI2PROTO_BUILD_DIR }}'
+
+- name: Recreate (or create) dri2proto build dir
+  file:
+    state: directory
+    path: '{{ DRI2PROTO_BUILD_DIR }}'
+
+- name:  Download dri2proto tarball
+  unarchive:
+    src: 'https://www.x.org/releases/individual/proto/dri2proto-{{ DRI2PROTO_VERSION }}.tar.gz'
+    dest: '{{ DRI2PROTO_BUILD_DIR }}'
+    remote_src: yes
+    extra_opts: [--strip-components=1]
+
+- name: Configure dri2proto
+  shell: |
+    cd {{ DRI2PROTO_BUILD_DIR }}
+    ./configure
+
+- name: Make dri2proto
+  make:
+    target: all
+    chdir: '{{ DRI2PROTO_BUILD_DIR }}'
+
+- name: Install dri2proto
+  make:
+    target: install
+    chdir: '{{ DRI2PROTO_BUILD_DIR }}'
+
+- name: Remove dri2proto build dir
+  file:
+    state: absent
+    path: '{{ DRI2PROTO_BUILD_DIR }}'
+
 - name: Remove VDPAU build folder if it exists
   file:
     state: absent
