--- a/TensorFlow/playbooks/package_installation/roles/cuda/tasks/main.yaml
+++ b/TensorFlow/playbooks/package_installation/roles/cuda/tasks/main.yaml
@@ -48,24 +48,24 @@
       - ninja
     executable: pip3
 
-- name: RHEL 7 --> yum install libX11, libX11-common, libExt, libXi, libXmu, libxcb, and xorg-x11-proto-devel for building Mesa
+- name: RHEL 7 --> yum install libX11, libX11-common, libXext, libXi, libXmu, libxcb, and xorg-x11-proto-devel for building Mesa
   yum:
     name:
       - libX11
       - libX11-common
-      - libExt
+      - libXext
       - libXi
       - libXmu
       - libxcb
       - xorg-x11-proto-devel
   when: RHEL_VERSION == "7"
 
-- name: RHEL 8 --> dnf install libX11, libX11-common, libExt, libXi, libXmu, libxcb, and xorg-x11-proto-devel for building Mesa
+- name: RHEL 8 --> dnf install libX11, libX11-common, libXext, libXi, libXmu, libxcb, and xorg-x11-proto-devel for building Mesa
   dnf:
     name:
       - libX11
       - libX11-common
-      - libExt
+      - libXext
       - libXi
       - libXmu
       - libxcb
