--- a/TensorFlow/playbooks/package_installation/roles/cuda/tasks/main.yaml
+++ b/TensorFlow/playbooks/package_installation/roles/cuda/tasks/main.yaml
@@ -48,7 +48,7 @@
       - ninja
     executable: pip3
 
-- name: RHEL 7 --> yum install libX11, libX11-common, libX11-devel, libXext, libXi, libXmu, libxcb, and xorg-x11-proto-devel for building Mesa
+- name: RHEL 7 --> yum install libX11, libX11-common, libX11-devel, libXext, libXi, libXmu, libxcb, pciaccess, and xorg-x11-proto-devel for building Mesa
   yum:
     name:
       - libX11
@@ -58,10 +58,11 @@
       - libXi
       - libXmu
       - libxcb
+      - pciaccess
       - xorg-x11-proto-devel
   when: RHEL_VERSION == "7"
 
-- name: RHEL 8 --> dnf install libX11, libX11-common, libX11-devel, libXext, libXi, libXmu, libxcb, and xorg-x11-proto-devel for building Mesa
+- name: RHEL 8 --> dnf install libX11, libX11-common, libX11-devel, libXext, libXi, libXmu, libxcb, pciaccess, and xorg-x11-proto-devel for building Mesa
   dnf:
     name:
       - libX11
@@ -71,6 +72,7 @@
       - libXi
       - libXmu
       - libxcb
+      - pciaccess
       - xorg-x11-proto-devel
   when: RHEL_VERSION == "8"
 
