--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel8_cuda10.1
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel8_cuda10.1
@@ -1,4 +1,4 @@
-FROM registry.redhat.io/rhel8/s2i-core
+FROM nvidia/cuda:10.1-base-ubi8
 MAINTAINER Courtney Pacheco <cpacheco@redhat.com>
 ENV LANG=en_US.utf8
 USER root
@@ -50,17 +50,11 @@ RUN ln -s /usr/bin/python3 /usr/bin/python
 RUN sh install_ansible_from_source.sh ${ANSIBLE_GIT_VERSION} && \
     rm install_ansible_from_source.sh
 
-# Install FFTW prerequisites via Ansible
+# Install FFTW + TensorFlow prerequisites via Ansible
 RUN cd ${FFTW_PREREQS_PLAYBOOK} && \
     ansible-playbook -i hosts play.yaml --extra-vars="{rhel_version: '8'}" && \
-    cd .. && \
-    rm -rf ${FFTW_PREREQS_PLAYBOOK}
-
-# Install TensorFlow prerequisites via Ansible
-RUN cd ${TF_PREREQS_PLAYBOOK} && \
-    ansible-playbook -i hosts play.yaml --extra-vars="{rhel_version: '8', use_s2i: 'yes', use_gpu: 'yes', cuda_rpm: 'http://developer.download.nvidia.com/compute/cuda/10.1/Prod/local_installers/cuda-repo-rhel8-10-1-local-10.1.243-418.87.00-1.0-1.x86_64.rpm'}" && \
-    cd .. && \
-    rm -rf ${TF_PREREQS_PLAYBOOK}
+    cd ${TF_PREREQS_PLAYBOOK} && \
+    ansible-playbook -i hosts play.yaml --extra-vars="{rhel_version: '8', use_s2i: 'yes'}" && \
 
 # Give user permissions to modify the 'macros' file + other files to run tests
 RUN chmod 777 /usr/libexec/s2i/run && \
