--- a/TensorFlow/playbooks/package_installation/roles/python36_numpy/tasks/main.yaml
+++ b/TensorFlow/playbooks/package_installation/roles/python36_numpy/tasks/main.yaml
@@ -18,6 +18,7 @@
       - make
       - python36-devel
       - subversion
+    install_weak_deps: no
   when: RHEL_VERSION == '7' and USE_S2I == 'no'
 
 - name: Install yum NumPy requirements for RHEL 7 (for UBI and s2i images only)
@@ -33,6 +34,7 @@
       - make
       - python36-devel
       - zlib-devel
+    install_weak_deps: no
   when: RHEL_VERSION == '7' and USE_S2I == 'yes'
 
 - name: Install NumPy requirements for RHEL 8 (for non-UBI and non-s2i images only)
@@ -52,6 +54,7 @@
       - make
       - python36-devel
       - subversion
+    install_weak_deps: no
   when: RHEL_VERSION == '8' and USE_S2I == 'no'
 
 - name: Install yum NumPy requirements for RHEL 8 (for UBI and s2i images only)
@@ -67,6 +70,7 @@
       - make
       - python36-devel
       - zlib-devel
+    install_weak_deps: no
   when: RHEL_VERSION == '8' and USE_S2I == 'yes'
 
 # For s2i and ubi7/ubi8 only
