Fixing syntactical error where the 'k=v' shorthand syntax cannot be combined with regular syntax

--- a/TensorFlow/playbooks/package_installation/roles/tensorflow/tasks/main.yaml
+++ b/TensorFlow/playbooks/package_installation/roles/tensorflow/tasks/main.yaml
@@ -13,11 +13,13 @@
     executable: pip3
 
 - name: RHEL 7 --> Install remaining TensorFlow requirements
-  yum: pkg=glibc
+  yum:
+    name: glibc
     install_weak_deps: no
   when: RHEL_VERSION == '7'
 
 - name: RHEL 8 --> Install remaining TensorFlow requirements
-  dnf: pkg=glibc
+  dnf:
+    name: glibc
     install_weak_deps: no
   when: RHEL_VERSION == '8'
