--- a/TensorFlow/playbooks/package_installation/roles/bazel/tasks/main.yaml
+++ b/TensorFlow/playbooks/package_installation/roles/bazel/tasks/main.yaml
@@ -2,12 +2,14 @@
 
 # Bazel requires java-devel, so let's install it
 - name: Install Bazel requirements (java-devel) for RHEL 7
-  yum: pkg=java-devel
+  yum:
+    name: java-devel
     install_weak_deps: no
   when: RHEL_VERSION == '7'
 
 - name: Install Bazel requirements (java-devel) for RHEL 8
-  dnf: pkg=java-devel
+  dnf:
+    name: java-devel
     install_weak_deps: no
   when: RHEL_VERSION == '8'
 
