Add 'yum clean all' and 'dnf clean all' to help prevent timeout errors

--- a/TensorFlow/playbooks/package_installation/roles/bazel/tasks/main.yaml
+++ b/TensorFlow/playbooks/package_installation/roles/bazel/tasks/main.yaml
@@ -13,6 +13,15 @@
     path: /var/cache/dnf
   when: rhel_ver == '8'
 
+# Do yum/dnf clean all
+- name: RHEL 7 --> yum clean all
+  shell: yum clean all
+  when: rhel_ver == '7'
+
+- name: RHEL 8 --> dnf clean all
+  shell: dnf clean all
+  when: rhel_ver == '8'
+
 # Bazel requires java-devel, so let's install it
 - name: Install Bazel requirements (java-devel) for RHEL 7
   yum:
