Adding 'warn: false' to suppress warning message for these particular tasks

--- a/TensorFlow/playbooks/package_installation/roles/bazel/tasks/main.yaml
+++ b/TensorFlow/playbooks/package_installation/roles/bazel/tasks/main.yaml
@@ -16,10 +16,12 @@
 # Do yum/dnf clean all
 - name: RHEL 7 --> yum clean all
   shell: yum clean all
+  warn: false
   when: rhel_ver == '7'
 
 - name: RHEL 8 --> dnf clean all
   shell: dnf clean all
+  warn: false
   when: rhel_ver == '8'
 
 # Bazel requires java-devel, so let's install it
