--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel8_cuda10.1
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel8_cuda10.1
@@ -19,7 +19,7 @@ COPY TensorFlow/.s2i_fftw/bin/ /usr/libexec/s2i
 
 # Set timeout for dnf (in seconds) to prevent Curl timeout errors w/ dnf
 ENV DNF_TIMEOUT=300
-RUN sed -i "/[main]/a timeout=${DNF_TIMEOUT}" >> /etc/dnf/dnf.conf
+RUN sed -i "/[main]/a timeout=${DNF_TIMEOUT}" /etc/dnf/dnf.conf
 
 # Set playbook paths
 ENV FFTW_PREREQS_PLAYBOOK=${HOME}/fftw_package_installation
