--- a/TensorFlow/playbooks/TensorFlow_installation/roles/build_tensorflow/tasks/main.yaml
+++ b/TensorFlow/playbooks/TensorFlow_installation/roles/build_tensorflow/tasks/main.yaml
@@ -163,7 +163,7 @@
     GCC_HOST_COMPILER_PATH: '{{ CC }}'
     CC_OPT_FLAGS: '-march=native'
     CUDA_TOOLKIT_PATH: '/usr/local/cuda'
-    CUDNN_INSTALL_PATH: '{{ CUDNN_INSTALL_PATH }}'
+    CUDNN_INSTALL_PATH: '/usr/local/cuda'
     NCCL_INSTALL_PATH: '{{ NCCL_INSTALL_PATH }}'
     TF_CUDA_VERSION: '{{ cuda_version.stdout }}'
     TF_CUDNN_VERSION: '{{ cudnn_version.stdout }}'
