Need to create user and group before switching to user 'default' via the USER step

--- a/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel8_cuda10.1
+++ b/TensorFlow/Dockerfiles/FFTW_backend/Dockerfile.openshift_rhel8_cuda10.1
@@ -77,6 +77,10 @@ RUN chmod 777 /usr/libexec/s2i/run && \
 RUN echo "remote_tmp = ${TOPDIR}/.ansible/tmp" >> ${FFTW_INSTALLATION}/ansible.cfg && \
     echo "remote_tmp = ${TOPDIR}/.ansible/tmp" >> ${TENSORFLOW_INSTALLATION}/ansible.cfg
 
+# Add 'default' user
+RUN groupadd -r default && \
+    useradd --no-log-init -u 1001 -d ${TOPDIR} -g default default
+
 # Set user to 'default'
 USER default
 
